--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,13 @@
 
+{
+  "name": "RakshakAI",
+  "short_name": "RakshakAI",
+  "start_url": "./index.html",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#4A90E2",
+  "icons": [
+    { "src": "assets/logo.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "assets/logo.png", "sizes": "512x512", "type": "image/png" }
+  ]
+}
